<resources>
    <string name="app_name">Package installer</string>
    <string name="next">Далее</string>
    <string name="install">Установить</string>
    <string name="done">Готово</string>
    <string name="security_settings_desc">Разрешить этому приложению:</string>
    <string name="cancel">Отменить</string>
    <string name="unknown">Неизвестный</string>
    <string name="installing">Установка</string>
    <string name="install_done">Приложение установлено.</string>
    <string name="install_confirm_question">Разрешения</string>
    <string name="install_confirm_question_no_perms">Хотите ли вы установить это приложение? Оно не требует различных разрешений.</string>
    <string name="install_confirm_question_update">Do you want to install an update to this existing application? Your existing data will not be lost. The updated application will get access to:</string>
    <string name="install_confirm_question_update_system">"Вы хотите установить обновление
 встроенного приложения? Ваши данные не будут потеряны.
 Приложение запрашивает разрешение к:"</string>
    <string name="install_confirm_question_update_no_perms">Do you want to update the existing app? Your existing data will remain and no special permission is required.</string>
    <string name="install_confirm_question_update_system_no_perms">Do you want to update this built-in app? Your existing data will remain and no special permission is required.</string>
    <string name="install_failed">Приложение не установлено</string>
    <string name="install_failed_invalid_apk">The package appears to be corrupt.</string>
    <string name="install_failed_inconsistent_certificates">"An existing package by the same name
 with a conflicting signature is already installed."</string>
    <string name="install_failed_older_sdk">"The package only works on newer versions of
 Android."</string>
    <string name="install_failed_cpu_abi_incompatible">"This app isn't
 compatible with your phone."</string>
    <string name="install_failed_file_not_found">"The package specified was deleted before
 installation could be completed."</string>
    <string name="install_failed_verify_failed">"The package did not pass verification and cannot
 be installed."</string>
    <string name="install_failed_verify_timeout">"A timeout occurred while trying to verify this
 package. Try to install it again later."</string>
    <string name="install_failed_msg">"%1$s couldn't be installed on your phone."</string>
    <string name="launch">Открыть</string>
    <string name="unknown_apps_dlg_title">Установка заблокирована</string>
    <string name="unknown_apps_dlg_text">For security, installation of apps obtained from unknown sources are banned.</string>
    <string name="ok">OK</string>
    <string name="settings">Открыть</string>
    <string name="allow_source_dlg_title">Новые источники для приложений</string>
    <string name="allow_source_dlg_text">"%1$s хочет установить другие приложения.

Разрешить
 это сейчас и в будущем?"</string>
    <string name="manage_applications">Manage apps</string>
    <string name="dlg_app_replacement_title">Заменить приложение</string>
    <string name="dlg_app_replacement_statement">"The app you're installing will replace another app.

All your previous user data will be saved."</string>
    <string name="dlg_sys_app_replacement_statement">"Это систменое приложение.

Все ваши предыдущие данные сохранятся."</string>
    <string name="out_of_space_dlg_title">Нет места</string>
    <string name="out_of_space_dlg_text">"%1$s couldn't be installed. Free up some space and try again."</string>
    <string name="dlg_ok">OK</string>
    <string name="app_not_found_dlg_title">App not found</string>
    <string name="app_not_found_dlg_text">"The app wasn't found in the list of installed apps."</string>
    <string name="uninstall_application_title">Uninstall app</string>
    <string name="uninstall_notice">Auto clear residual files after uninstallation</string>
    <string name="uninstall_update_title">Uninstall update</string>
    <string name="uninstall_activity_text">%1$s is part of the following app:</string>
    <string name="uninstall_application_text">Do you want to uninstall this app?</string>
    <string name="uninstall_application_text_all_users">Uninstall this app for <b>all</b> users? The app and its data will be removed from <b>all</b> users on the device.</string>
    <string name="uninstall_update_text">Do you want to replace this app with the factory version?</string>
    <string name="uninstalling">Удаление...</string>
    <string name="uninstall_done">Удаление завершено.</string>
    <string name="uninstall_failed">Удаление завершенно некорректно.</string>
    <string name="uninstall_failed_device_policy_manager">"Невозможно удалить приложение,потому что
 это активный администратор устройства."</string>
    <string name="manage_device_administrators">Manage device administrators</string>
    <string name="uninstall_failed_msg">"%1$s couldn't be uninstalled."</string>
    <string name="Parse_error_dlg_title">Parse error</string>
    <string name="Parse_error_dlg_text">There was a problem parsing the package.</string>
    <string name="newPerms">Новые</string>
    <string name="allPerms">Все</string>
    <string name="privacyPerms">Конфиденциальность</string>
    <string name="devicePerms">Разрешения Устройства</string>
    <string name="no_new_perms">Это обновление не требует новых разрешений.</string>
    <string name="version_text">Версия: %1$s</string>
    <string name="version_text_message" formatted="false">%s %s заменяется на %s</string>
    <string name="uninstall">Удалить</string>
    <string name="install_success">Успешно установлено</string>
    <string name="call">Phone call</string>
    <string name="call_log">Read call logs</string>
    <string name="contacts">Read contacts</string>
    <string name="r_sms">Reading SMS</string>
    <string name="r_mms">Reading MMS</string>
    <string name="s_sms">Send SMS</string>
    <string name="s_mms">Send MMS</string>
    <string name="network">Mobile data</string>
    <string name="wlan">WLAN network</string>
    <string name="location">Locate</string>
    <string name="recordaudio_local">Local/call recordings</string>
    <string name="recordaudio_phone">Call recordings</string>
    <string name="camera">Camera</string>
    <string name="autorun">Run at startup</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="disable_keyguard_warning_title">Security Warnings</string>
    <string name="disable_keyguard_warning_message">This app may disable screen locking</string>
    <string name="help_message">You can change settings in \"Settings/Apps Control\"</string>
    <string name="permlab_processOutgoingCalls">Re-route outgoing calls</string>
    <string name="security_detecting">Security checking</string>
    <string name="text_accept">Разрешить</string>
    <string name="text_reject">Запретить</string>
    <string name="text_prompt">Спрашивать</string>
    <string name="text_virus_install_confirm">Приложение заражено, продолжить установку?</string>
    <string name="text_virus_install_confirm_tips">Tips</string>
    <string name="text_loading">Сканирование</string>
    <string name="text_installing">Установка</string>
    <string name="text_virus">Вирус</string>
    <string name="text_safe">Security</string>
    <string name="permission_count">разрешение(я)</string>
    <string name="perm_notity">Уведомление</string>
    <string name="perm_autostart">Авто загрузка</string>
    <string name="perm_dialog">Alert</string>
    <string name="perm_other">Other permissions</string>
    <string name="text_scan_done_safe">Safe</string>
    <string name="text_scan_done_virus">Вирус</string>
    <string name="text_scan_done_virus_replace">Вирув</string>
    <string name="text_scan_done_fake_replace">Пиратское приложение</string>
    <string name="text_install_done">Установлено</string>
    <string name="text_btn_still_install">Still Install</string>
    <string name="text_btn_replace">Replace</string>
    <string name="text_btn_del">Delete</string>
    <string name="text_btn_continue">Continue</string>
    <string name="text_btn_goto_market">Install official version</string>
    <string name="install_failed_version_downgrade">Install failed, version downgrade</string>
    <string name="PERM_ID_WRITE_CONTACT">Modify contacts</string>
    <string name="PERM_ID_DELETE_CONTACT">Delete contacts</string>
    <string name="PERM_ID_WRITE_CALLLOG">Modify call logs</string>
    <string name="PERM_ID_DELETE_CALLLOG">Delete call logs</string>
    <string name="PERM_ID_WRITE_SMSDB">Modify SMS</string>
    <string name="PERM_ID_DELETE_SMSDB">Delete SMS</string>
    <string name="PERM_ID_WRITE_MMSDB">Modify MMS</string>
    <string name="PERM_ID_DELETE_MMSDB">Delete MMS</string>
    <string name="SUM_PERM_ID_WRITE_CONTACT">Modify your contacts list</string>
    <string name="SUM_PERM_ID_DELETE_CONTACT">Delete your contacts list</string>
    <string name="SUM_PERM_ID_WRITE_CALLLOG">Modify your call logs</string>
    <string name="SUM_PERM_ID_DELETE_CALLLOG">Delete your call logs</string>
    <string name="SUM_PERM_ID_WRITE_SMSDB">Modify your SMS inbox</string>
    <string name="SUM_PERM_ID_DELETE_SMSDB">Delete your SMS inbox</string>
    <string name="SUM_PERM_ID_WRITE_MMSDB">Modify your MMS inbox</string>
    <string name="SUM_PERM_ID_DELETE_MMSDB">Delete your MMS inbox</string>
    <string name="perm_aotulunch">Auto launch</string>
    <string name="perm_notification">Notification</string>
    <string name="perm_alert">Pop-up window</string>
    <string name="mz_store_statement">Meizu app store, the official download channel</string>
    <string name="mz_store_statement_summry">Triple detecting technology, safe, quick and convenient.</string>
    <string name="warning_title_unsafe">Risk detected</string>
    <string name="warning_title_caution">Please be serious of installation</string>
    <string name="warning_title_remind">App safety reminder</string>
    <string name="warning_title_kind_remind">Reminder</string>
    <string name="warning_title_risk_remind">Risk Remind</string>
    <string name="install_warning_default">"In case of safty, advise you don't install apps from unknown source that may case security risk of your phone and personal data. You can shield this remind in Settings."</string>
    <string name="install_warning_default_summry"></string>
    <string name="install_warning_version_state">Installing newest version?%1$s (Newest)</string>
    <string name="install_warning_rival_text">For better to adapter meizu mobile phone, please download apps in meizu app store.</string>
    <string name="install_warning_virus">Detected risk of virus, shield installation for your mobile safety.</string>
    <string name="install_warning_untypical_download">Detected package origination is: “%1$s”,from unofficial channel. Advise you be caution of this installation to avoid losses.</string>
    <string name="install_warning_rival_download_text">Your mobile phone and personal data is easy to be attacked from unknown source apps. These apps may exits risk of tampering data, horse or advertisement implantation. Advise you using meizu official app store.</string>
    <string name="btn_goto_mz_store">Go to app store</string>
    <string name="btn_goto_mz_store_install">Install in meizu app store</string>
    <string name="btn_goto_mz_store_for_high_version">Install newest version in meizu app store</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_delete_apk_file">Detele package file</string>
    <string name="btn_next_step">Next</string>
    <string name="btn_install_mz_edition">Install legal copy</string>
    <string name="btn_install_legal_copy">Install legal copy</string>
    <string name="btn_install_confirm">Install still？</string>
    <string name="recommendations">Recommendations</string>
</resources>