<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/install_warning_text_padding_side" android:paddingRight="@dimen/install_warning_text_padding_side" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:meizu="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/warning_span" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="72.0dip">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/warning_img" android:background="@drawable/install_warning" android:layout_width="19.0dip" android:layout_height="19.0dip" />
        <TextView android:textSize="16.0sp" android:textColor="@color/warning_color" android:id="@id/warning_title" android:paddingLeft="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/warning_title_kind_remind" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/text_50percent_alpha" android:id="@id/warning_text" android:paddingTop="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_warning_rival_text" android:layout_below="@id/warning_span" android:lineSpacingExtra="8.0dip" />
    <Button android:ellipsize="end" android:id="@id/btn_handle_warning" android:background="@drawable/stroke_btn" android:paddingLeft="14.0dip" android:paddingRight="14.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="@dimen/btn_height" android:layout_marginTop="15.0dip" android:text="@string/btn_continue" android:singleLine="true" android:layout_below="@id/warning_text" />
    <TextView android:textSize="@dimen/confirm_btn_text_size" android:textColor="@color/color_black" android:id="@id/mz_store_statement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/mz_store_statement" android:layout_below="@id/btn_handle_warning" />
    <TextView android:textSize="@dimen/uninstall_notice_size" android:id="@id/mz_store_statement_summry" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/mz_store_statement_summry" android:layout_below="@id/mz_store_statement" />
    <TextView android:textSize="@dimen/uninstall_notice_size" android:id="@id/mz_store_statement_high_version" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_below="@id/mz_store_statement_summry" />
    <Button android:textColor="@color/color_safe_level_safe" android:ellipsize="end" android:id="@id/btn_goto_mz_store" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:visibility="gone" android:clickable="true" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="0.0dip" android:singleLine="true" android:layout_below="@id/mz_store_statement_high_version" />
</RelativeLayout>
